<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/Register"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/paris"
            tools:context=".RegisterActivity">


            <TextView
                android:id="@+id/companyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="95dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="94dp"
                android:background="#11000000"
                android:ems="10"
                android:text="@string/NewRegistration"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/companyTitle"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:background="#11000000"
                android:ems="10"
                android:hint="@string/FirstName"
                android:textColorHint="@color/White"/>


            <EditText
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/firstName"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:background="#11000000"
                android:ems="10"
                android:hint="@string/LastName"
                android:textColorHint="@color/White"/>

            <EditText
                android:id="@+id/Address"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/lastName"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:background="#11000000"
                android:ems="10"
                android:hint="@string/Address"
                android:textColorHint="@color/White"/>

            <EditText
                android:id="@+id/City"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/Address"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="82dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="78dp"
                android:background="#11000000"
                android:ems="10"
                android:hint="@string/City"
                android:textColorHint="@color/White"/>

            <EditText
                android:id="@+id/Province"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/City"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="83dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="77dp"
                android:background="#11000000"
                android:ems="10"
                android:hint="@string/Province"
                android:textColorHint="@color/White"/>

            <EditText
                android:id="@+id/PostalCode"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/Province"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="79dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="81dp"
                android:background="#11000000"
                android:ems="10"
                android:hint="@string/PostalCode"
                android:textColorHint="@color/White"/>

            <EditText
                android:id="@+id/Country"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/PostalCode"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="81dp"
                android:layout_marginTop="39dp"
                android:layout_marginEnd="79dp"
                android:background="#11000000"
                android:ems="10"
                android:hint="@string/Country"
                android:textColorHint="@color/White"/>

            <EditText
                android:id="@+id/HomePhone"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/Country"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="82dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="78dp"
                android:background="#11000000"
                android:ems="10"
                android:hint="@string/HomePhone"
                android:textColorHint="@color/White"/>

            <EditText
                android:id="@+id/BusPhone"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/HomePhone"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="85dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="75dp"
                android:background="#11000000"
                android:ems="10"
                android:hint="@string/BusPhone"
                android:textColorHint="@color/White"/>

            <EditText
                android:id="@+id/Email"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/BusPhone"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:background="#11000000"
                android:ems="10"
                android:hint="@string/Email"
                android:textColorHint="@color/White"/>
            <EditText
                android:id="@+id/User_Name"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/Email"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:background="#11000000"
                android:ems="10"
                android:hint="@string/username"
                android:textColorHint="@color/White"/>
            <EditText
                android:id="@+id/Pass_word"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/User_Name"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:background="#11000000"
                android:ems="10"
                android:hint="@string/password"
                android:textColorHint="@color/White"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/textViewLogin"
                android:layout_below="@+id/Pass_word"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:background="#11000000"
                android:ems="10"
                android:hint="@string/AlreadyRegister"
                android:textColorHint="@color/White"
                android:textSize="15dp"
                android:textAlignment="center">

            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/RegisterCard"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/textViewLogin"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="105dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="106dp"
                android:layout_marginBottom="50dp"
                app:cardBackgroundColor="@android:color/holo_blue_dark"
                app:cardCornerRadius="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/Register_Button"
                        android:layout_width="176dp"
                        android:layout_height="39dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="13dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="11dp"
                        android:layout_marginBottom="6dp"
                        android:background="@android:color/transparent"
                        android:text="@string/Register"
                        android:textColor="@color/White"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
