<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paris"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/companyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="108dp"
        android:background="#11000000"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/travel_experts"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="80dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="97dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="160dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="80dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="106dp"
        app:cardBackgroundColor="@android:color/holo_blue_dark"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/login_button"
                android:layout_width="176dp"
                android:layout_height="39dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="6dp"
                android:background="@android:color/transparent"
                android:text="@string/login" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/RegisterNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginCard"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="82dp"
        android:background="@android:color/transparent"
        android:text="New User? Register Here"
        android:textAlignment="center"
        android:textColor="@color/Reddish"
        android:textSize="15sp" />
</RelativeLayout>